--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
             "email": "me@jirizapletal.com"
         }
     ],
-    "minimum-stability": "stable",
+
     "require": {
         "php": ">= 5.6",
-        "nette/nette": "2.4.0",
+        "nette/nette": "2.4.0@stable",
         "propel/propel": "~2.0@dev"
     },
     "autoload": {
