--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,14 @@
     "authors": [
         {
             "name": "Jiří Zapletal",
-            "email": "me@jirizapletal.com"
+            "email": "zapletal@wakers.cz"
         }
     ],
 
     "require": {
-        "php": ">= 5.6",
-        "nette/nette": "2.4.0@stable",
-        "propel/propel": "~2.0@dev"
+        "php": ">= 7.2",
+        "nette/nette": "~2.4.0@stable",
+        "propel/propel": "~2.0@alpha"
     },
     "autoload": {
         "classmap": [
