--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jzaplet/nette-propel",
+    "name": "stanlay01/nette-propel-1",
     "description": "Propel 2 integration for Nette Framework",
     "type": "library",
     "license": "MIT",
